--- a/css.css
+++ b/css.css
@@ -38,7 +38,6 @@ body{margin: 0 auto;
 margin: 0 auto}
 
 /*Banner y menu*/
-
 #btn-menu{display: none;
 position: relative;
 opacity:0 ;
@@ -65,7 +64,6 @@ opacity:0 ;visibility: hidden;}
 		 background-position: center;
     	position: relative; 
     	margin: 0 auto;} 
-
 
 .top{ 
  margin: 0 auto;
@@ -149,13 +147,19 @@ width: 60px;
 height:50px;}
 
 
+.contenedor .menu a:hover > img{
+filter: drop-shadow(0.5px 0px 0px #FFCB03) }
+
+
 .contenedor .logo a h1{
 	font-family:Modric;
 font-size: 36px;
-font-family:didactgothic;}
+font-family:didactgothic;
+}
 
-.contenedor .logo a h1:hover
-{text-shadow:0px 0px 1px yellow}
+.contenedor .logo a:hover >h1
+{text-shadow:0px 0px 1px yellow;
+	color:#FFCB03}
 
 .menu ul {
 display: flex;
@@ -181,6 +185,17 @@ border-bottom:2px solid #FFCB03;
 
 
 .menu ul a:hover{
+	 	 	color:#FFCB03;
+border-bottom:2px solid #FFCB03;
+ 	 	transition: all 1s ease;}
+
+
+.menu ul:hover > #Inicio{
+color:white;
+border-bottom:2px solid transparent;
+ 	 	transition: all 1s ease;}
+
+.menu ul #Inicio:hover{
 	 	 	color:#FFCB03;
 border-bottom:2px solid #FFCB03;
  	 	transition: all 1s ease;}
@@ -224,14 +239,14 @@ max-width: 1300px}
 
 
 .mensaje{
-width:800px;
+width:600px;
 margin: 0px auto ;
 margin-top:150px;
 background: rgba(0,0,0,0.0);}
 
 .mensaje h2{ 
 color: white ;
-font-size:25px; 
+font-size:20px; 
 margin:0px auto;
 text-align: center;
 font-family: monospace;
@@ -244,7 +259,7 @@ font-family:didactgothic;}
 
 .mensaje h3{ 
 color: white ;
-font-size:65px; 
+font-size:60px; 
 text-align: center;
 font-family: monospace;
 font-family:didactgothic;
@@ -278,17 +293,18 @@ color: black}
 /*Saludo agencia*/
 .agencia{display: grid;
 grid-template-columns: repeat(2,1fr);
-margin: 30px auto;
+margin: 40px auto;
 grid-gap: 20px;
-max-width:1200px;
-width: 90%;}
+max-width:1000px;
+width: 100%;}
 
-.agencia h2{font-size: 35px;
+.agencia h2{font-size: 40px;
 letter-spacing: 1px;
 margin: 0px;
 font-family:usar2;
-color:#ff7915;
-margin-bottom:10px;}
+color:rgb(255, 126, 46);
+margin-bottom:10px;
+margin-top: 10px}
 
 .agencia p{ 
 font-size: 19px;
@@ -301,25 +317,26 @@ font-family:didactgothic;
 text-align: left;
 margin-top: -6px;}
 
-.agencia-img{background:orange;
+.agencia-img{background:rgba(255, 126, 46,0.9);
 width: 400px	
 ;height: 280px;
-border-radius: 20px	;
+border-radius: 10px	;
 margin: 0 auto;
-margin-top: 20px}
+margin-top: 20px;box-shadow: 0px 0px 1px gray}
 
 .agencia-img img{width: 100% ;
 height:270px;
 margin-left:5%;
 margin-top: -3%;
-border-radius: 20px;}
+border-radius: 10px;
+border:1px solid gray;box-shadow: 0px 0px 1px gray	}
 
 .agencia-img:hover> img{width: 100% ;
 height:270px;
-margin-left:-6%;
+margin-left:-5%;
 margin-top:6%;
 border-radius: 20px;
-transition: all 1s ease-in-out;}
+transition: all 2s ease-in-out;}
 
 
 
@@ -661,8 +678,9 @@ width: calc(250px * 10)}
 grid-template-columns: repeat(2,1fr);
 width: 90%;
 margin:20px auto;
-max-width:1100px;
-color: black;}
+max-width:1000px;
+color: black;
+padding: 0px 0px 0px 50px}
 
 .serv-a p{
 font-family:didactgothic;
@@ -695,7 +713,8 @@ margin-top:20px}
 
 .serv-a li:hover{color: #ff7915;
 cursor: pointer;color: 
-#fc4a1a}
+#fc4a1a;
+transform: scale(1.5);}
 
 
 
