--- a/Style/css.css
+++ b/Style/css.css
@@ -226,38 +226,38 @@ max-width: 1300px}
 .mensaje{
 width:85%;
 margin: 0px auto ;
-margin-top:130px;
+margin-top:120px;
 background: rgba(0,0,0,0.0);
 max-width: 800px;}
 
-:root{--characters: 18ch;
---characters-steps: 18;}
+:root{--characters:18ch;
+--characters-steps:18;}
 
 .mensaje h4{ 
 color: white ;
-font-size:26px; 
+font-size:24px; 
 margin:0px auto;
 text-align: center;
 font-family: monospace;
-text-shadow: 0px 0px 2px black;
+text-shadow: 0px 0px 7px black;
 overflow: hidden;	
 white-space: nowrap;
 color: white;
-animation: lon 7s steps(var(--characters-steps)) 2s infinite , tap 
-1s infinite;
-border-right:3px solid yellow;
+animation: lon 7s steps(var(--characters-steps)) 2s infinite , tap 1s infinite ;
+border-right:3px solid#FFCB03;
 width:0px;}
 
 @keyframes tap{
   0%{border-right-color: transparent;}
-  50%{border-right-color: yellow;}
-  100%{border-right-color: transparent;}
+  50%{border-right-color: #FFCB03;}
+  100%{border-right-color:transparent}
 }
 
 @keyframes lon{
   0%{width: 0px;}
   50%{width:var(--characters) }
-  100%{width: 0px;}
+  80%{width:var(--characters)}
+	 100%{width: 0px;}
 }	
 
 .mensaje h4 b{color:#FFCB03;
@@ -266,12 +266,14 @@ font-family:didactgothic;}
 
 .mensaje h3{ 
 color: rgb(255, 252, 236) ;
-font-size:70px; 
+font-size:65px; 
 text-align: center;
 font-family: monospace;
 font-family:didactgothic;
-text-shadow: 0px 0px 8px rgb(66, 27, 12);
-letter-spacing:1px;}
+text-shadow: 0px 0px 3px rgb(87, 34, 7);
+letter-spacing:1px;
+width: 90%;
+margin: 0 auto;}
 
  .mensaje a {
 font-family:didactgothic;
@@ -280,23 +282,21 @@ display: flex;
 justify-content: center;
 align-items: center;
 margin:20px auto;
-width: 335px;
+width: 350px;
 color:white;
 background: rgba(15,15,15,0.89);
 border:1px solid #FFCB03;
-border-radius: 5px;}
-
-.mensaje a {text-decoration: none;}
+border-radius: 5px;text-decoration: none;
+transition: all 1s ease;}
 
 .mensaje a b {text-decoration: none;
 font-family:didactgothic;
 background: #FFCB03;
 color: black;
 padding:7px 12px;
-margin-left: -11px;
+margin-left: -28px;
 margin-right: 10px;
 border-radius:3px 0px 0px 3px;}
-	
 
 /*Saludo agencia*/
 .agencia{display: grid;
@@ -670,7 +670,7 @@ justify-content: center;
 align-items: center;
 margin: 10px auto;
 animation: scroll 30s linear infinite;
--webkit-animation:scroll 30s linear infinite;
+-webkit-animation:scroll 15s linear infinite ;
 width: calc(250px * 10)}
 
 
@@ -929,7 +929,8 @@ transition: 1s all ease-in-out}
 .Contac-info .redes-contacto  {font-size: 28px;
 padding: 5px;
 display: grid ;
-grid-template-columns: repeat(4,1fr);}
+grid-template-columns: repeat(4,1fr);
+width: 70%;}
 
 .fa-facebook{color: #1877f2}
 .fa-linkedin-square{color:#0073b1}
@@ -949,7 +950,6 @@ transition: 1s all ease-in-out;}
 ; font-family: monospace;font-family:usar;}
 
 .Contac-info div li{list-style: none;
-padding-top: 3px;
 font-family:didactgothic;;}
 
 .Contac-info div li a:hover{list-style: none;
@@ -975,11 +975,6 @@ background-color: #ffffff1f;}
 .Contac-info div form input::placeholder{color: rgb(255, 255, 255);
 font-size: 15px;}
 
-.fa-search{position: absolute;
-	font-size: 30px;
-background-color: none;
-margin-left: -30px;
-margin-top: -13px;}
 
 .Termino{
 	border: 1px solid blac;
@@ -998,13 +993,13 @@ transition:all ease 1s ;}
 .Termino div a:hover{color: white}
 
 .up{background-color: transparent;
-}
+overflow: hidden;
+border: none;
+display: flex;justify-self:start;}
 
 .up a i{ 
 color: rgba(240, 169, 61, 0.734);
-font-size: 40px;
-position: absolute; 
-right: 10px;
-margin-top: -15px;}
+font-size: 50px;
+ }
 
 .up a i:hover{color: #e75516;}
